Bug #32996: minor wording change in YAML file
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47429 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-15-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-01-15-univention-system-setup.yaml
@@ -8,7 +8,7 @@ version: [0]
 desc: |
   This errata update fixes several issues:
   * Adding multiple IP addresses to one network interface has been fixed.
-  * The summary of the network interface changes is more detailful now.
+  * The summary of the network interface changes is more detailed now.
   * Multiple IP addresses belonging to the same sub-network are now correctly registered in LDAP.
   * The German translation of "Next" has been changed to "Weiter".
 bug:
