--- a/doc/errata/staging/2014-01-14-linux.yaml
+++ b/doc/errata/staging/2014-01-14-linux.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: linux
-fix: 
+fix: 3.10.11-1.46.201401191746
 note:
 version: [0]
 desc: |
@@ -38,9 +38,9 @@ desc: |
  * Information leak in wanxl network ioctl (CVE-2014-1445)
 
  This kernel also fixes an ABI breakage: The kernel update to linux-3.10 for
- UCS-3.2 caused the header files to move from /usr/include/adm/ to the
+ UCS 3.2 caused the header files to move from /usr/include/adm/ to the
  different location /ucr/include/gnu-*-linux/asm/, which broke compiling other
- software. The change was reverted.
+ software. This change was reverted.
 cve:
  - CVE-2013-2147
  - CVE-2013-4343
