fix wording in errata YAML (Bug #33893)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47479 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2013-12-10-univention-lib.yaml
+++ b/doc/errata/staging/2013-12-10-univention-lib.yaml
@@ -17,5 +17,5 @@ desc: |
   * User name mapping has been added to univention-lib.
     The new function "custom_username" maps the default user names
     to the actual name.
-  * A new python lib "s4" has been added for samba4 related stuff.
+  * A new python lib (s4) has been added for Samba-related operations.
 bug: [33582,33649,33710,33893]
