elaborate a bit more (Bug #33587)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47480 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-21-univention-novnc.yaml
+++ b/doc/errata/staging/2014-01-21-univention-novnc.yaml
@@ -6,6 +6,7 @@ fix: 0.4+0+20131014+git142aa45-3.4.201401212016
 note:
 version: [0]
 desc: |
-  The noVNC service is now served fully on TCP port 6080, as newer Firefox
-  browsers had problems accessing the service through https://.
+  The noVNC service (used to provide browser-based VNC access to virtual
+  machines in UVMM) is now served on TCP port 6080. This fixes HTTPS connection 
+  problems with newer Firefox browsers.
 bug: [33587]
