--- a/doc/errata/staging/2014-01-08-univention-samba4.yaml
+++ b/doc/errata/staging/2014-01-08-univention-samba4.yaml
@@ -6,7 +6,7 @@ fix: 3.0.39-15.570.201401131822
 note:
 version: [0]
 desc: |
-  This errata update fixes several issues:
-  * Joining an additional Samba DC could overwrite changes made to
-    the default domain GPO and domain controller GPO.
+  Joining an additional Samba domain controller could overwrite changes made to
+  the default domain group policy object and the domain controller group
+  policy object. This issue has been fixed.
 bug: [33881]
