various fixes  Bug #33383 et al
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47486 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2013-11-21-univention-updater.yaml
+++ b/doc/errata/staging/2013-11-21-univention-updater.yaml
@@ -6,8 +6,8 @@ fix: 9.0.38-9.1244.201401101117
 note:
 version: [0]
 desc: |
-  This errata update fixes several issues:
-  * If a component is blocking a release update and this component is from the
+  This update fixes several issues:
+  * If a component is blocking a release update and this component part of the
     App Center, link to the app instead of showing a cryptic error message
   * Fixed the error handling in case the UMC server is restarted during an
     update
