--- a/doc/errata/staging/2013-12-13-univention-management-console-module-udm.yaml
+++ b/doc/errata/staging/2013-12-13-univention-management-console-module-udm.yaml
@@ -6,12 +6,12 @@ fix: 4.0.97-17.433.201401271301
 note:
 version: [0]
 desc: |
-  This errata update fixes several issues:
-  * Certain policies did not get a link to directly edit them when opening the
-    "Policies" tab of LDAP objects. Fixed that.
-  * A user's empty mail server was overwritten with the first non-emtpy one
-    even for existing users. Fixed that.
+  This update fixes several issues:
+  * Certain policies did not display a link to directly edit them when opening the
+    "Policies" tab of LDAP objects.
+  * A user without a mail home server was sometimes assigned a mail home server when
+    modifying attributes
   * A typo in the German translation has been fixed.
-  * After adding a new standard container the container was not selectable as
-    position for new objects. Fixed that.
+  * After adding a new standard container the container was not selectable as a
+    position for new objects.
 bug: [33004, 33329, 33554, 33651]
