--- a/doc/errata/staging/2014-01-21-univention-management-console-module-appcenter.yaml
+++ b/doc/errata/staging/2014-01-21-univention-management-console-module-appcenter.yaml
@@ -6,7 +6,7 @@ fix: 3.0.50-17.230.201401211203
 note:
 version: [0]
 desc: |
-  This errata update fixes several issues:
-  * Added Support URLs for apps
-  * Renamed app detail "Website" to "More information"
+  This update fixes several issues:
+  * Applications can now provide information on the organisation providing support for the app
+  * Renamed "Website" to "More information"
 bug: [33958, 31344]
