--- a/doc/errata/staging/2014-01-30-univention-management-console.yaml
+++ b/doc/errata/staging/2014-01-30-univention-management-console.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console
-fix: 
+fix: 6.0.24-2.775.201401301104
 note:
 version: [0]
 desc: |
