* Update for Bug #34015
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47525 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-29-samba4.yaml
+++ b/doc/errata/staging/2014-01-29-samba4.yaml
@@ -2,12 +2,13 @@ product: ucs
 release: "3.1"
 scope: ucs_3.1-0-errata3.1-1
 src: samba4
-fix: 4.0.3-1.385.201401291147
+fix: 4.0.3-1.386.201401301130
 note: This update fixes these vulnerabilities.
 version: [1]
 desc: |
- This errata update fixes an issue of the smbstatus tool
- installed with Samba 4, where the tool would suffer a
- segmentation fault due to a value temprarily missing from
- a session info data structure.
-bug: [33758]
+ This errata update fixes two issues in samba4:
+ * The smbstatus tool of Samba 4 was affected by a segmentation fault
+   due to a value temprarily missing from a session info data structure.
+* Logon failures accompanied by log messages in the samba log files:
+  "auth_generic_prepare failed: NT_STATUS_INVALID_SERVER_STATE".
+bug: [33758, 34015]
