* Raise samba/debug/level on s4 backup and s4 slave for Bug #33904
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47530 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
@@ -76,6 +76,7 @@ command2:
  . utils.sh; upgrade_to_latest_test_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
+ ucr set samba/debug/level=4
 command4:
  . utils.sh; install_ucs_test
  reboot
