--- a/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-095-slave-s4.cfg
@@ -76,6 +76,7 @@ command2:
  . utils.sh; upgrade_to_latest_test_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
+ ucr set samba/debug/level=4
 command4:
  . utils.sh; install_ucs_test
  reboot
