Typo in advisory Bug #32571
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47545 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-28-univention-kernel-image.yaml
+++ b/doc/errata/staging/2014-01-28-univention-kernel-image.yaml
@@ -41,7 +41,7 @@ desc: |
  * Information leak in wanxl network ioctl (CVE-2014-1445)
 
  This kernel also fixes an ABI breakage: The kernel update to linux-3.10 for
- UCS 3.2 caused the header files to move from /usr/include/adm/ to the
+ UCS 3.2 caused the header files to move from /usr/include/asm/ to the
  different location /ucr/include/gnu-*-linux/asm/, which broke compiling other
  software. This change was reverted.
 cve:
