Bug #33164: UVMM: Set title on noVNC to VM name and host
Set the tab/window title to the name of the VM and the name of the host.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47557 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-30-univention-virtual-machine-manager-daemon.yaml
+++ b/doc/errata/staging/2014-01-30-univention-virtual-machine-manager-daemon.yaml
@@ -2,11 +2,14 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-virtual-machine-manager-daemon
-fix: 3.0.17-4.483.201401301119
+fix: 3.0.17-5.484.201401311109
 note:
 version: [0]
 desc: |
- This errata updates univention-virtual-machine-manager-daemon to use the
- internal libvirt eventloop. It fixes a problem with accumulating open
- file handles. This could lead to performance problems in large environments.
-bug: [33458]
+ This erratum update fixes the following issues:
+ * The univention-virtual-machine-manager-daemon now uses the internal libvirt
+   event-loop implementation. This fixes a problem with accumulating open file
+   handles, which lead to performance problems in large environments.
+ * The title of noVNC tabs/windows now includes the name of the virtual machine
+   and the name of the host.
+bug: [33458,33164]
