Doc Bug #31855, Bug #33946, Bug #33947, Bug #34028
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47590 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-31-univention-management-console-frontend.yaml
+++ b/doc/errata/staging/2014-01-31-univention-management-console-frontend.yaml
@@ -8,4 +8,5 @@ version: [0]
 desc: |
  This update fixes several issues:
  * fixed styling errors in the host dropdown menu related to browser differences
-bug: [32655]
+ * Support UMC modules that may be opened only once at the same time
+bug: [32655,31855]
