YAML update Bug #33956
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47606 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2013-12-11-univention-s4-connector.yaml
+++ b/doc/errata/staging/2013-12-11-univention-s4-connector.yaml
@@ -6,6 +6,6 @@ fix: 7.0.33-8.456.201401291135
 note:
 version: [1]
 desc: |
-  This errata update fixes two issues:
-  * Added support for synchronization of MS WMI filters (disabled by default).
+  This update adds support for synchronization of MS WMI filters
+  (disabled by default).
 bug: [33956]
