--- a/doc/errata/staging/2014-01-29-samba4.yaml
+++ b/doc/errata/staging/2014-01-29-samba4.yaml
@@ -3,10 +3,10 @@ release: "3.1"
 scope: ucs_3.1-0-errata3.1-1
 src: samba4
 fix: 4.0.3-1.386.201401301130
-note: This update fixes these vulnerabilities.
+note:
 version: [1]
 desc: |
- This errata update fixes two issues in samba4:
+ This update fixes two issues in Samba 4:
  * The smbstatus tool of Samba 4 was affected by a segmentation fault
    due to a value temprarily missing from a session info data structure.
  * Logon failures accompanied by log messages in the samba log files:
