--- a/doc/errata/staging/2014-01-31-univention-management-console-frontend.yaml
+++ b/doc/errata/staging/2014-01-31-univention-management-console-frontend.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console-frontend
-fix: 
+fix: 3.0.152-21.819.201402041443
 note:
 version: [0]
 desc: |
