various typos (Bug #34020 et al)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47651 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-29-samba4.yaml
+++ b/doc/errata/staging/2014-01-29-samba4.yaml
@@ -8,7 +8,7 @@ version: [1]
 desc: |
  This update fixes two issues in Samba 4:
  * The smbstatus tool of Samba 4 was affected by a segmentation fault
-   due to a value temprarily missing from a session info data structure.
+   due to a value temporarily missing from a session info data structure.
  * Logon failures accompanied by log messages in the samba log files:
    "auth_generic_prepare failed: NT_STATUS_INVALID_SERVER_STATE".
 bug: [33758, 34015]
