--- a/doc/errata/staging/2013-12-19-univention-ldap.yaml
+++ b/doc/errata/staging/2013-12-19-univention-ldap.yaml
@@ -6,5 +6,5 @@ fix: 9.0.27-8.672.201402031445
 note:
 version: [1]
 desc: |
-  This errata update adds a new schema extension for MS WMI filters
+  This update adds a new LDAP schema extension for MS WMI filters.
 bug: [33937]
