--- a/doc/errata/staging/2014-02-07-univention-system-setup.yaml
+++ b/doc/errata/staging/2014-02-07-univention-system-setup.yaml
@@ -6,7 +6,5 @@ fix: 7.0.69-7.568.201402071339
 note:
 version: [0]
 desc: |
-  This update adds a Firefox addon that hides the tab bar. This is 
-  necessary for the appliance setup user experience. It was removed
-  in Firefox 24esr, the addon restores the feature.
+  This update hides the tab bar of Mozilla Firefox in the appliance setup.
 bug: [33640]
