--- a/doc/errata/staging/2014-02-04-univention-updater.yaml
+++ b/doc/errata/staging/2014-02-04-univention-updater.yaml
@@ -2,12 +2,12 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-updater
-fix: 9.0.38-10.1245.201402042222
+fix: 9.0.38-11.1247.201402111139
 note:
 version: [0]
 desc: |
- This erratum update fixes the following issues:
- * The Cron-job for updading UCS releases did not evaluate check the activation
+ This update fixes the following issues:
+ * The Cron-job for updating UCS releases did not evaluate check the activation
    flag of the release policy. This has been fixed.
  * The Univention updater is now called in non-interactive-mode when invoked from the maintenance Cron job and init script.
 bug: [33189,33194]
