--- a/doc/errata/staging/2014-02-04-univention-ad-connector.yaml
+++ b/doc/errata/staging/2014-02-04-univention-ad-connector.yaml
@@ -2,10 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-ad-connector
-fix: 8.0.17-4.366.201402041717
+fix: 8.0.17-5.367.201402111244
 note:
 version: [0]
 desc: |
-    This errata update fixes the following issues in univention-ad-connector:
+  This errata update fixes the following issue in univention-ad-connector:
   * Added a note about univention-ad-takeover to the UMC module.
 bug: [34019]
