--- a/doc/errata/staging/2014-02-05-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-02-05-univention-directory-manager-modules.yaml
@@ -7,6 +7,6 @@ note:
 version: [0]
 desc: |
   This update fixes several issues:
-  * Create a human readable error message when policy name contains invalid characters.
-  * Fix translation of some error messages when Univention Corporate Client was installed.
+  * Display a human-readable error message if policy names contain invalid characters.
+  * Fix the translation of some error messages if Univention Corporate Client was installed.
 bug: [33850]
