* Updated for Bug #32974 and Bug #33977
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@47921 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-01-08-samba.yaml
+++ b/doc/errata/staging/2014-01-08-samba.yaml
@@ -2,11 +2,11 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: samba
-fix: 2:4.1.0-1.622.201402101713
+fix: 2:4.1.0-1.626.201402191110
 note: 
 version: [0]
 desc: |
- This errata fixes two issues in the samba package:
+ This errata fixes the following issues in the samba package:
  * Adjustments to GPO security filters (aka delegation) made by the Group Policy
    Management Console (GPMC) could get lost in the sysvol filesystem (replaced
    by older settings) during the sysvol synchronization. In this case starting
@@ -17,4 +17,7 @@ desc: |
    prevent the changed file ACLs to be overwritten during the rsync of sysvol.
    Basically this is a workaround for a behaviour specific to rsync.
  * Versions in the package dependencies have been updated.
-bug: [33751, 33972]
+ * Domain account lockout support for Samba4 DCs has been implemented.
+ * The domain services database module was affected by a segmentation fault
+   when handling objects without objectClass.
+bug: [33751, 33972, 32974, 33977]
