--- a/packaging/univention-package-template/debian/rules
+++ b/packaging/univention-package-template/debian/rules
@@ -3,7 +3,7 @@
 # univention-package-template
 #  debhelper script for the debian package
 #
-# Copyright 2010-2013 Univention GmbH
+# Copyright 2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -29,17 +29,6 @@
 # License with the Debian GNU/Linux or Univention distribution in file
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
-
-override_dh_auto_install:
-	univention-install-config-registry
-	dh_auto_install
-
-override_dh_fixperms:
-	dh_fixperms
-	chmod 755 debian/univention-package-template/usr/lib/univention-install/76univention-package-template.inst
-
-override_dh_auto_test:
-	ucslint
 
 %:
 	dh $@
