made made squid/redirect a bit more flexible (Bug #32429)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48222 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/conffiles/etc/squid3/squid.conf
+++ b/services/univention-squid/conffiles/etc/squid3/squid.conf
@@ -212,8 +212,12 @@ print
 print "coredump_dir /var/spool/squid3"
 print
 
-if configRegistry.get("squid/redirect") == "squidguard":
-	print 'url_rewrite_program /usr/bin/squidGuard -c /etc/squid/squidGuard.conf'
+redirect = configRegistry.get("squid/redirect")
+if redirect:
+	if configRegistry.get("squid/redirect") == "squidguard":
+		print 'url_rewrite_program /usr/bin/squidGuard -c /etc/squid/squidGuard.conf'
+	else:
+		print 'url_rewrite_program %s' % redirect
 
 print "forwarded_for off"
 
