* Bug #34288: Implement method for retrieval of own IP address in umc-web-server
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48409 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/control
+++ b/management/univention-management-console-frontend/debian/control
@@ -38,6 +38,7 @@ Depends: ${misc:Depends},
  python-univention-management-console (>= 4.0.268),
  python-cherrypy3,
  python-daemon,
+ python-ipaddr,
  python-simplejson
 Description: UCS Management Console - Web server
  UCS Management Console is a web based program to manage computers.
