--- a/test/ucs-ec2-tools/examples/jenkins/autotest-094-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-094-slave-s3.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-094-slave-s3.log
 
-# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 1 - ami-00ac4477
-ec2_ami: ami-00ac4477
+# AMI: Univention Corporate Server (UCS) 3.2-1 (official image) rev. 1 - ami-661cec11
+ec2_ami: ami-661cec11
 
 # EC2 region
 ec2_region: eu-west-1
