Bug #24010: YAML UCR: Find modified templates by checking MD5 sums
Add implementation to check for modified template files before update.

The check for renamed if kept for compatibility and can be disabled by
specifying '--dpkg'.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48426 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-03-10-univention-config-registry.yaml
+++ b/doc/errata/staging/2014-03-10-univention-config-registry.yaml
@@ -2,11 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-1
 src: univention-config-registry
-fix: 9.0.6-5.453.201403101139
+fix: 9.0.6-6.454.201403101254
 note:
 version: [1]
 desc: |
-  This erratum fixes a regression in Univention Configuration Registry (UCR),
-  were in some cases the file ownership was not preserved correctly when a file
-  is committed.
-bug: [34241]
+  This update fixes the following issues in the Univention Configuration Registry (UCR) package:
+  * In some cases the file ownership was not preserved correctly when a file is committed.
+  * The program "univention-check-templates" now also checks UCR template files
+    for modifications by using the MD5 hash sum managed by dpkg. This allows
+    detection of modified templates before an update is performed.
+bug: [34241,23010]
