Bug #24010: UCR: template-check: Work-around missing debian.deb822
Add debian.deb822 as Suggests, as it is only in unmaintained.
Add an alternative implementation to directly parse /var/lib/dpkg/status.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48447 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/control
+++ b/base/univention-config-registry/debian/control
@@ -37,6 +37,7 @@ Depends: ${misc:Depends}, ${python:Depends},
  python-univention,
  python-univention-config-registry (= ${source:Version}),
  ldap-utils
+Suggests: python-debian,
 Replaces: univention-config-registry (<< 7.0.9~)
 Description: UCS - configuration manager
  This package contains the univention-config configuration
