Bug #24010: YAML UCR: template-check
Fix bug ref.
Remove explanation sentence.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48470 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-03-10-univention-config-registry.yaml
+++ b/doc/errata/staging/2014-03-10-univention-config-registry.yaml
@@ -9,6 +9,5 @@ desc: |
   This update fixes the following issues in the Univention Configuration Registry (UCR) package:
   * In some cases the file ownership was not preserved correctly when a file is committed.
   * The program "univention-check-templates" now also checks UCR template files
-    for modifications by using the MD5 hash sum managed by dpkg. This allows
-    detection of modified templates before an update is performed.
-bug: [34241,23010]
+    for modifications by using the MD5 hash sum managed by dpkg.
+bug: [34241,24010]
