Bug #34336: ucs-ec2-test: Fix utils.sh
Rename upgrade_to_3.2 to upgrade_to_testing.
Make sure latest ucs-test repository is used.

Declare variables function local.
Add quoting.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48500 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-206-ucsschool-update-3.1-to-3.2-singleserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-206-ucsschool-update-3.1-to-3.2-singleserver-s4.cfg
@@ -54,7 +54,7 @@ command4:
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -o School1 -S -s 4
 command6:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
  reboot
  LOCAL sleep 120 
