--- a/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
@@ -54,7 +54,7 @@ command4:
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -M
 command6:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
  reboot
  LOCAL sleep 120 
@@ -94,7 +94,7 @@ command4:
 command5:
  /root/schoolinstaller.py -uAdministrator -p univention -o School1 -M -s 3
 command6:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
  reboot
  LOCAL sleep 120 
@@ -134,7 +134,7 @@ command5:
  echo -n "univention" >/tmp/univention
  /root/schoolinstaller.py -uAdministrator -p univention -o School2 -M -s 3
 command6:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
  reboot
  LOCAL sleep 120 
